--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,31 @@
 wp-includes/
 wp-admin/
 wp-config*
+wp-activate.php
+wp-app.php
+wp-atom.php
+wp-blog-header.php
+wp-comments-post.php
+wp-commentsrss2.php
+wp-content/languages/
+wp-content/plugins/
+wp-cron.php
+wp-feed.php
+wp-links-opml.php
+wp-load.php
+wp-login.php
+wp-mail.php
+wp-pass.php
+wp-rdf.php
+wp-register.php
+wp-rss.php
+wp-rss2.php
+wp-settings.php
+wp-signup.php
+wp-trackback.php
+xmlrpc.php
 index.php
-wp-adctivate.php
 license.txt
+readme.html
+wp-content/index.php
+wp-content/themes/index.php
